# Lume

./: .env.example  .gitignore  BULK_PAYMENT_GUIDE.md  COMPLIANCE_DEPLOYMENT_CHECKLIST.md  COMPLIANCE_FEATURE_GUIDE.md  COMPLIANCE_IMPLEMENTATION_SUMMARY.md  COMPLIANCE_TESTING_GUIDE.md  COMPLIANCE_VISUAL_DESIGN.md  CONTRIBUTING.md  DASHBOARD_GUIDE.md  Features-list.txt  LICENSE  MOBILE_WALLET_REFACTOR.md  PAYMENT_IMPLEMENTATION.md  README.md  SECURITY_FIX_SUMMARY.md  TOAST_IMPLEMENTATION_SUMMARY.md  TOAST_NOTIFICATIONS.md  TOAST_VISUAL_EXAMPLES.md  TRANSACTION_HISTORY.md  TRANSACTION_HISTORY_SUMMARY.md  WALLET_SETUP.md  XLM_CHART_FEATURE.md  next.config.ts  package-lock.json  package.json  supabase-schema.sql
app/: globals.css  head.tsx  layout.tsx  not-found.tsx  page.tsx  sitemap.ts
app/actions/: dashboard-stats.ts  employees.ts  escrow.ts  recent-payments.ts
app/components/: AnimatedBackground.tsx  AppLayout.tsx  EmployeeDashboard.tsx  Footer.tsx  LandingPage.tsx  MainDashboard.tsx  Navbar.tsx  PreConnectRoleModal.tsx  RoleSelectionModal.tsx  WalletConnectionModal.tsx  WalletSelectionModal.tsx
app/hooks/: useStellarNetworkStats.ts
app/store/: authStore.ts  escrowStore.ts
contracts/lume-escrow/: Cargo.toml  README.md
contracts/lume-escrow/src/: lib.rs
lib/: bulk-payment.ts  employee-database.ts  payroll-logic.ts  stellar-payment.ts  supabase-server.ts  supabase.ts  wallet-service.ts
public/: manifest.json  robots.txt
supabase/: README.md  SECURITY_FIX_README.md  migration.sql  schema.sql
types/: database.ts  escrow.ts
(+25 files in other folders)
